funcionou um pouco até